x1156 Allow the logged in user to be a work-requester
When creating work, if the supplied requester name is not in the
recipient table, but it is the current user's username, then create
a matching recipient in the recipient table.